# alpacagen

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/alpacagen/: __init__.py  main.py  requirement.txt
src/alpacagen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/alpacagen/converters/: __init__.py  text.py
src/alpacagen/generators/: __init__.py  chunk.py  client.py  dataset.py  qa.py
src/alpacagen/models/: __init__.py  qa_pair.py
src/alpacagen/prompt/: __init__.py  prompt_gen_en.txt  prompt_gen_zhtw.txt
src/alpacagen/strategies/: __init__.py  chunk.py
tests/: test_alpacagen.py
