[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpacagen"
version = "0.1.0"
description = "A tool for generating instruction-following datasets in Alpaca format"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "markitdown",
    "langchain_text_splitters",
    "openai>=1.0.0",
    "tqdm",
    "nest_asyncio"
]

[project.urls]
Homepage = "https://github.com/yourusername/alpacagen"
Repository = "https://github.com/yourusername/alpacagen.git"