[metadata]
name = alpacagen
version = 1.1.1
author = Hsiang-An Chuang
author_email = qqandy0120@google.com
description = A tool for generating instruction-following datasets in Alpaca format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qqandy/alpacagen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    markitdown
    langchain_text_splitters
    openai>=1.0.0
    tqdm
    nest_asyncio

[options.packages.find]
where = src

[options.package_data]
alpacagen = prompt/*.txt